[package]
name = "rs_aoc2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
num = "0.4.3"
petgraph = "0.6.5"
regex = "1.11.1"
rgb = "0.8.50"
data_aoc2024 = { path = "../data_aoc2024" }
priority-queue = "2.1.1"
itertools = "0.13.0"

[lib]
name = "aoc2024"
path = "src/lib.rs"

[[bin]]
name = "aoc2024"
path = "src/main.rs"
